--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
+	<meta http-equiv='pragma' content='no-cache'>
+	
 	<title>СУПЕР СЕКРЕТНОЕ ОРУЖИЕ v6</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script>
