--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
 					<input type="number" id="profsoyuz" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>
 			</div>
+			<br>
+			<div class="form-group" style="font-size:12px;font-weight:bold;">
+				<label class="col-sm-12 col-form-label m-0 p-0">РУБ.ЧАС = НОРМ.ОКЛАД / НОРМ.ЧАСЫ</label>
+				<label class="col-sm-12 col-form-label m-0 p-0">ОКЛАД = РУБ.ЧАС * КОЛ-ВО.ОТРАБ.ДНЕЙ</label>						
+				<label class="col-sm-12 col-form-label m-0 p-0">НАДБАВКА = РУБ.ЧАС * КОМАНДИРОВКА * 0.25</label>				
+				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД * 2</label>	
+			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
 					<div style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
