--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
 			<br>
 			<div class="form-group" style="font-size:12px;font-weight:bold;">
 				<label class="col-sm-12 col-form-label m-0 p-0">РУБ.ЧАС = НОРМ.ОКЛАД / НОРМ.ЧАСЫ</label>
-				<label class="col-sm-12 col-form-label m-0 p-0">ОКЛАД = РУБ.ЧАС * КОЛ-ВО.ОТРАБ.ДНЕЙ</label>						
+				<label class="col-sm-12 col-form-label m-0 p-0">ОКЛАД = РУБ.ЧАС * ФАКТ.ОТРАБ.ЧАСЫ</label>						
 				<label class="col-sm-12 col-form-label m-0 p-0">НАДБАВКА = РУБ.ЧАС * КОМАНДИРОВКА * 0.25</label>				
-				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД * 2</label>	
+				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД.ЧАСОВ * 2</label>	
 			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
