--- a/index.html
+++ b/index.html
@@ -144,13 +144,12 @@
 						<input id="saveToFile" type="submit" class="btn btn-primary" value="Экспорт" onclick="SaveFile(); buttonPressed(this.id);" style="font-weight:bold;">	
 					</div>	
 					<div class="btn-group btn-group-sm w-100" style="margin-left:1px;">							
-					
-						<label class="custom-file" style="width:100%;height:31px;border-radius:0 4px 4px 0;background:#007BFF;text-align:center;font-weight:bold;color:white;">Импорт
+						<label class="custom-file" style="font-size:14px;display:flex;align-items:center;justify-content:center;width:100%;height:31px;border-radius:0 4px 4px 0;background:#007BFF;font-weight:bold;color:white;">Импорт
 							<input type="file" accept=".txt" name="fileToLoad" id="fileToLoad" style="display:none;">
-							<div>
+<!-- 							<div>
 								<span align="center" class="btn" id="butt" style="color:white"></span>
 							</div>
-						</label>
+						 --></label>
 					</div>					
 				</div>			
 				<div id="debugButtons" class="btn-group btn-group-sm" style="width:100%;margin-top:1px;" hidden>
