--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 					</div>		
 					<input type="number" id="premia_tek" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>	
-				<div class="input-group" hidden>
+				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК / НДФЛ:</span>
 					</div>		
