--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
 				<label class="col-sm-12 col-form-label m-0 p-0">ОКЛАД = РУБ.ЧАС * ФАКТ.ОТРАБ.ЧАСЫ</label>						
 				<label class="col-sm-12 col-form-label m-0 p-0">НАДБАВКА = РУБ.ЧАС * КОМАНДИРОВКА * 0.25</label>				
 				<label class="col-sm-12 col-form-label m-0 p-0">ДВОЙНАЯ = РУБ.ЧАС * КОЛ-ВО.ВЫХ.И.ПРАЗД.ЧАСОВ * 2</label>	
-			</div>				
+	<label class="col-sm-12 col-form-label m-0 p-0">НОЧНЫЕ = РУБ.ЧАС * ОТРАБ.НОЧ.ЧАСЫ * 0.4</label>	
+				</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
 					<div style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
